# wgut

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
gsl/: CMakeLists.txt
imgui/: CMakeLists.txt  ImGuiImplScreenState.cpp
include/: falg.h
include/wgut/: Grid.h  ImGuiImplScreenState.h  MeshBuilder.h  OrbitCamera.h  ScreenState.h  Win32Window.h  wgut_common.h  wgut_d2d1.h  wgut_d3d11.h  wgut_dxgi.h  wgut_flg.h  wgut_gizmo.h  wgut_shader.h  wgut_string.h
include/wgut/graphics/: dx11.h  wgut_common.h  wgut_d3d11.h  wgut_shader.h
lib/: CMakeLists.txt
samples/: CMakeLists.txt
samples/clear_swapchain/: CMakeLists.txt  main.cpp
samples/d2d/: CMakeLists.txt  main.cpp
samples/draw_cube/: main.cpp
samples/draw_triangle/: main.cpp
samples/empty_window/: CMakeLists.txt  main.cpp
samples/flg/: main.cpp
samples/flg_cube/: main.cpp
samples/gizmo/: CMakeLists.txt  main.cpp
samples/grid/: main.cpp
samples/imgui_simple/: CMakeLists.txt  main.cpp
samples/texture_cube/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  Win32Window.cpp  geometry_mesh.cpp  geometry_mesh.h  gizmo.cpp  gizmo.h  gizmo_rotation.cpp  gizmo_scale.cpp  gizmo_translation.cpp  impl.h
